--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         FizzBuzzDOM
     </h1>
 
-    <div id="griglia" class="col text-black square">
+    <div id="griglia" class="container text-black">
 
     </div>
 
